--- a/Lifter/app/src/main/res/layout/activity_progress.xml
+++ b/Lifter/app/src/main/res/layout/activity_progress.xml
@@ -10,24 +10,27 @@
     <ImageView
         android:id="@+id/photo_thumbnail"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="0dp"
+        android:contentDescription="@string/app_name"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toTopOf="@+id/nestedScrollView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/app_name"
-        android:scaleType="centerInside"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/nestedScrollView"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginTop="8dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/workout_graph_fragment"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/photo_thumbnail"
         tools:context=".progress.ProgressActivity"
-        tools:showIn="@layout/activity_progress"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        tools:showIn="@layout/activity_progress">
 
         <fragment
             android:id="@+id/main_fragment"
@@ -38,6 +41,18 @@
 
     </androidx.core.widget.NestedScrollView>
 
+    <fragment
+        android:id="@+id/workout_graph_fragment"
+        android:name="com.example.lifter.progress.WorkoutGraphFragment"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/button_take_photo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView"
+        tools:layout="@layout/fragment_workout_graph" />
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/button_take_photo"
         android:layout_width="wrap_content"
@@ -46,5 +61,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@android:drawable/ic_input_add" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
