--- a/Lifter/app/src/main/res/layout/activity_add_event.xml
+++ b/Lifter/app/src/main/res/layout/activity_add_event.xml
@@ -50,7 +50,19 @@
                 android:text="Choose Date"
                 android:textSize="18dp" />
 
+
+            <TextView
+                android:id="@+id/buttonTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="25dp"
+                android:text="Choose Time"
+                android:textSize="18dp" />
+
+
         </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
