--- a/Lifter/app/src/main/res/layout/activity_suggested_event.xml
+++ b/Lifter/app/src/main/res/layout/activity_suggested_event.xml
@@ -11,10 +11,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:textStyle="bold"
-        android:textColor="@color/colorBlack"
         android:text="@string/what_days_do_you_want_exercise"
-        android:textSize="20sp" />
+        android:textColor="@color/colorBlack"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -79,8 +79,33 @@
             android:text="Saturday" />
 
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Time :"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/buttonTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="25dp"
+            android:text="Choose Time"
+            android:textSize="18dp" />
+
 
     </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
