--- a/Lifter/app/src/main/res/layout/fragment_contacts.xml
+++ b/Lifter/app/src/main/res/layout/fragment_contacts.xml
@@ -24,12 +24,14 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/contacts_recycler_view"
+        android:id="@+id/contacts_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_centerVertical="true"/>
+        android:layout_centerVertical="true"
+        android:layout_marginStart="-1dp"
+        android:layout_marginTop="0dp" />
 
 
 </RelativeLayout>
