--- a/Lifter/app/src/main/res/layout/fragment_chat.xml
+++ b/Lifter/app/src/main/res/layout/fragment_chat.xml
@@ -9,8 +9,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="@string/chat_fragment" />
+        android:layout_centerInParent="true" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_new_friend_fab"
