--- a/Lifter/app/src/main/res/layout/activity_message.xml
+++ b/Lifter/app/src/main/res/layout/activity_message.xml
@@ -15,7 +15,8 @@
         android:id="@+id/private_messages_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/message_toolbar">
+        android:layout_below="@id/message_toolbar"
+        android:layout_above="@id/chat_linear_layout">
     </androidx.recyclerview.widget.RecyclerView>
 
     <LinearLayout
